增加代码生成，集成人人代码生成项目

--- a/generic-generate/src/main/resources/template/Controller.java.vm
+++ b/generic-generate/src/main/resources/template/Controller.java.vm
@@ -1,23 +1,22 @@
-package ${package}.${moduleName}.controller;
+package ${package}.controller;
 
 import java.util.List;
 import java.util.Map;
 
-import org.apache.shiro.authz.annotation.RequiresPermissions;
+import ${mainPath}.LogUtil;
+import ${mainPath}.result.ResultData;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
+import ${mainPath}.constants.GlobalConstants;
 
-import ${package}.${moduleName}.entity.${className}Entity;
-import ${package}.${moduleName}.service.${className}Service;
-import ${mainPath}.common.utils.PageUtils;
-import ${mainPath}.common.utils.Query;
-import ${mainPath}.common.utils.R;
+import com.personal.common.base.BaseController;
+import ${package}.entity.${className}Entity;
+import ${package}.service.${className}Service;
+import ${mainPath}.PageUtils;
+import ${mainPath}.Query;
 
-
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
 
 
 /**
@@ -28,71 +27,98 @@ import ${mainPath}.common.utils.R;
  * @date ${datetime}
  */
 @RestController
-@RequestMapping("/${moduleName}/${pathName}")
-public class ${className}Controller {
+@RequestMapping(GlobalConstants.PREFIX + "${pathName}")
+public class ${className}Controller extends BaseController{
+
+    private static LogUtil logger = LogUtil.getLogger(${className}Controller.class);
+
 	@Autowired
 	private ${className}Service ${classname}Service;
 	
 	/**
 	 * 列表
 	 */
-	@RequestMapping("/list")
-	@RequiresPermissions("${moduleName}:${pathName}:list")
-	public R list(@RequestParam Map<String, Object> params){
+    @ResponseBody
+	@RequestMapping(value = "/list.do",method = RequestMethod.POST)
+	public PageUtil list(@RequestParam Map<String, Object> params){
+        ResultData result=new ResultData();
 		//查询列表数据
         Query query = new Query(params);
 
 		List<${className}Entity> ${classname}List = ${classname}Service.queryList(query);
 		int total = ${classname}Service.queryTotal(query);
-		
-		PageUtils pageUtil = new PageUtils(${classname}List, total, query.getLimit(), query.getPage());
-		
-		return R.ok().put("page", pageUtil);
+
+        PageUtil pageUtil = new PageUtil(0, "查询成功", total, ${classname}List);
+		return pageUtil;
 	}
 	
 	
 	/**
 	 * 信息
 	 */
-	@RequestMapping("/info/{${pk.attrname}}")
-	@RequiresPermissions("${moduleName}:${pathName}:info")
-	public R info(@PathVariable("${pk.attrname}") ${pk.attrType} ${pk.attrname}){
-		${className}Entity ${classname} = ${classname}Service.queryObject(${pk.attrname});
-		
-		return R.ok().put("${classname}", ${classname});
+    @ResponseBody
+	@RequestMapping(value = "/info.do")
+	public ResultData info(HttpServletRequest request, HttpServletResponse response){
+        Map<String,Object> params = this.getAllParams(request);
+        logger.info("  ${className}Controller info params:" + params.toString());
+
+	    ResultData result = new ResultData();
+
+		${className}Entity ${classname} = ${classname}Service.get(${pk.attrType}.valueOf(params.get("id").toString()));
+
+		result.setData(${classname});
+		return result;
 	}
 	
 	/**
 	 * 保存
 	 */
-	@RequestMapping("/save")
-	@RequiresPermissions("${moduleName}:${pathName}:save")
-	public R save(@RequestBody ${className}Entity ${classname}){
+    @ResponseBody
+	@RequestMapping(value = "/save.do",method = RequestMethod.POST)
+	public ResultData save(HttpServletRequest request,${className}Entity ${classname}){
+        ResultData result = new ResultData();
+        String userId = this.parseToken(request).get("userId").toString();
+        tSysMenu.setCreateUser(Long.valueOf(userId));
 		${classname}Service.save(${classname});
-		
-		return R.ok();
+
+		result.setMessage("保存成功！");
+
+		return result;
 	}
 	
 	/**
 	 * 修改
 	 */
-	@RequestMapping("/update")
-	@RequiresPermissions("${moduleName}:${pathName}:update")
-	public R update(@RequestBody ${className}Entity ${classname}){
+    @ResponseBody
+	@RequestMapping(value = "/update.do",method = RequestMethod.POST)
+	public ResultData update(HttpServletRequest request,${className}Entity ${classname}){
+
+	    ResultData result = new ResultData();
+        String userId = this.parseToken(request).get("userId").toString();
+        tSysMenu.setUpdateUser(Long.valueOf(userId));
 		${classname}Service.update(${classname});
-		
-		return R.ok();
+
+        result.setMessage("更新成功！");
+
+		return result;
 	}
 	
 	/**
 	 * 删除
 	 */
-	@RequestMapping("/delete")
-	@RequiresPermissions("${moduleName}:${pathName}:delete")
-	public R delete(@RequestBody ${pk.attrType}[] ${pk.attrname}s){
-		${classname}Service.deleteBatch(${pk.attrname}s);
-		
-		return R.ok();
+	@RequestMapping(value = "/delete.do",method = RequestMethod.POST)
+    @ResponseBody
+	public ResultData delete(HttpServletRequest request){
+
+        Map<String,Object> params = this.getAllParams(request);
+        logger.info("  ${className}Controller deleteById params:" + params.toString());
+
+        ResultData result = new ResultData();
+		${pk.attrType} id = ${pk.attrType}.valueOf(params.get("id").toString());
+		${classname}Service.deleteById(id);
+
+        result.setMessage("删除成功！");
+		return result;
 	}
 	
 }
