--- a/generic-generate/src/main/resources/template/Service.java.vm
+++ b/generic-generate/src/main/resources/template/Service.java.vm
@@ -1,9 +1,9 @@
-package ${package}.${moduleName}.service;
+package ${package}.service;
 
-import ${package}.${moduleName}.entity.${className}Entity;
+import ${package}.entity.${className}Entity;
 
-import java.util.List;
-import java.util.Map;
+import com.personal.common.service.BaseService;
+
 
 /**
  * ${comments}
@@ -12,19 +12,6 @@ import java.util.Map;
  * @email ${email}
  * @date ${datetime}
  */
-public interface ${className}Service {
-	
-	${className}Entity queryObject(${pk.attrType} ${pk.attrname});
-	
-	List<${className}Entity> queryList(Map<String, Object> map);
-	
-	int queryTotal(Map<String, Object> map);
-	
-	void save(${className}Entity ${classname});
-	
-	void update(${className}Entity ${classname});
-	
-	void delete(${pk.attrType} ${pk.attrname});
-	
-	void deleteBatch(${pk.attrType}[] ${pk.attrname}s);
+public interface ${className}Service extends BaseService<${className}Entity,${pk.attrType}>{
+
 }
