--- a/generic-generate/src/main/resources/template/list.js.vm
+++ b/generic-generate/src/main/resources/template/list.js.vm
@@ -1,6 +1,6 @@
 $(function () {
     $("#jqGrid").jqGrid({
-        url: baseURL + '${moduleName}/${pathName}/list',
+        url: '../${pathName}/list',
         datatype: "json",
         colModel: [			
 #foreach($column in $columns)
@@ -66,15 +66,14 @@ var vm = new Vue({
             vm.getInfo(${pk.attrname})
 		},
 		saveOrUpdate: function (event) {
-			var url = vm.${classname}.${pk.attrname} == null ? "${moduleName}/${pathName}/save" : "${moduleName}/${pathName}/update";
+			var url = vm.${classname}.${pk.attrname} == null ? "../${pathName}/save" : "../${pathName}/update";
 			$.ajax({
 				type: "POST",
-			    url: baseURL + url,
-                contentType: "application/json",
+			    url: url,
 			    data: JSON.stringify(vm.${classname}),
 			    success: function(r){
 			    	if(r.code === 0){
-						alert('操作成功', function(index){
+						alert(r, function(index){
 							vm.reload();
 						});
 					}else{
@@ -92,12 +91,11 @@ var vm = new Vue({
 			confirm('确定要删除选中的记录？', function(){
 				$.ajax({
 					type: "POST",
-				    url: baseURL + "${moduleName}/${pathName}/delete",
-                    contentType: "application/json",
+				    url: "../${pathName}/delete",
 				    data: JSON.stringify(${pk.attrname}s),
 				    success: function(r){
 						if(r.code == 0){
-							alert('操作成功', function(index){
+							alert(r, function(index){
 								$("#jqGrid").trigger("reloadGrid");
 							});
 						}else{
@@ -108,7 +106,7 @@ var vm = new Vue({
 			});
 		},
 		getInfo: function(${pk.attrname}){
-			$.get(baseURL + "${moduleName}/${pathName}/info/"+${pk.attrname}, function(r){
+			$.get("../${pathName}/info/"+${pk.attrname}, function(r){
                 vm.${classname} = r.${classname};
             });
 		},
